{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 57,
  "lineage": "c813222d-d205-587f-f3a4-06607ebd427c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "db_security_group_available",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:security-group/sg-01792d5d4931b750b",
            "description": "Allow TLS inbound traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "SecurityGroup"
                ]
              }
            ],
            "id": "sg-01792d5d4931b750b",
            "name": "allow_tls",
            "tags": {
              "Name": "SecurityGroup"
            },
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_available",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:vpc/vpc-089f9c79921b1cd7a",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02282d0bb72bf60b0",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0947cb5db60337ffa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vpc_name_tag"
                ]
              }
            ],
            "id": "vpc-089f9c79921b1cd7a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e15566bc73962db4",
            "owner_id": "010978120347",
            "tags": {
              "Name": "vpc_name_tag"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_bal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010978120347:loadbalancer/app/app-load-balancer/115e779bbc33df78",
            "arn_suffix": "app/app-load-balancer/115e779bbc33df78",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-load-balancer-1449039509.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:010978120347:loadbalancer/app/app-load-balancer/115e779bbc33df78",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-load-balancer",
            "security_groups": [
              "sg-01792d5d4931b750b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051b8fe59d57f6f77"
              },
              {
                "subnet_id": "subnet-06b6958fbe4ba6a52"
              }
            ],
            "subnets": [
              "subnet-051b8fe59d57f6f77",
              "subnet-06b6958fbe4ba6a52"
            ],
            "tags": {
              "Environment": "UTA"
            },
            "tags_all": {
              "Environment": "UTA"
            },
            "vpc_id": "vpc-089f9c79921b1cd7a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_security_group.db_security_group_available",
            "data.aws_subnet_ids.db_subnet_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010978120347:listener/app/app-load-balancer/115e779bbc33df78/1f4521219a66764f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:010978120347:targetgroup/tf-example-lb-tg/eeaa1109f978ef6e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010978120347:listener/app/app-load-balancer/115e779bbc33df78/1f4521219a66764f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:010978120347:loadbalancer/app/app-load-balancer/115e779bbc33df78",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_bal",
            "aws_lb_target_group.tar_gp",
            "data.aws_security_group.db_security_group_available",
            "data.aws_subnet_ids.db_subnet_available",
            "data.aws_vpc.vpc_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tar_gp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010978120347:targetgroup/tf-example-lb-tg/eeaa1109f978ef6e",
            "arn_suffix": "targetgroup/tf-example-lb-tg/eeaa1109f978ef6e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010978120347:targetgroup/tf-example-lb-tg/eeaa1109f978ef6e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "dependencies": [
            "data.aws_vpc.vpc_available"
          ]
        }
      ]
    }
  ]
}